ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: men-app-ingress
  labels:
    app.kubernetes.io/name:  men-app-ingress
spec:
  rules:
  - host: mentore.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: men-app-home
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: men-app-ingress
  labels:
    app.kubernetes.io/name:  men-app-ingress
spec:
  rules:
  - host: mentore.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: men-app-mobile
            port: 
              number: 80
